[package]
name = "credchain_rust"
version = "0.1.0"
edition = "2024"

[dependencies]
tfhe = { version = "~1.2.0", features = ["integer"] }
rand_core = {version = "0.9.3", features = ["os_rng"]}
rand = "0.8"
p521 = {version = "0.13.3", features = ["serde"]}
sysinfo = "0.30"  # or latest version
serde = "1.0.219"
serde_json = "1.0.140"